# sun_sensor

./: Cargo.toml  Embed.toml  memory.x  serial_plotter_config.json
.cargo/: config.toml
ahrs_development/code/: synthetic_ukf.jl
calibration/code/: derive_cal_parameters.py  ldr_cal.py
calibration/data/: dynamic.csv  ldr.csv  live_set.csv
post_processing/code/: confirm_checksum.py
post_processing/data/: crc_check.txt  static.csv
src/: attitude.rs  bno055.rs  boxplus_ukf.rs  complementary_filter.rs  estimator.rs  fault_detector.rs  faults.rs  inverse_embedding.rs  ldr_array.rs  linalg.rs  lsm9ds1.rs  main.rs  report.rs
