[package]
authors = ["dstutman <git@stutman.tech>"]
edition = "2021"
readme = "README.md"
name = "sun-sensor"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

[dependencies.stm32f3]
features = ["stm32f303", "rt"]
version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "sun-sensor"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
