[package]
authors = ["dstutman <git@stutman.tech>"]
edition = "2021"
readme = "README.md"
name = "sun-sensor"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
libm = "0.2.6"
nalgebra = { version = "0.32.1", default-features = false, features = ["libm"] }
stm32f3xx-hal = { version = "0.9.2", features = ["ld", "rt", "enumset", "stm32f303x8"] }

# this lets you use `cargo fix`!
[[bin]]
name = "sun-sensor"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
