[package]
authors = ["dstutman <git@stutman.tech>"]
edition = "2021"
readme = "README.md"
name = "sun-sensor"
version = "0.1.0"

[dependencies]
embedded-hal  = "0.2.3"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
libm = "0.2.6"
nalgebra = { version = "0.32.1", default-features = false, features = ["libm", "serde-serialize-no-std"] }
stm32f3xx-hal = { version = "0.9.2", features = ["ld", "rt", "enumset", "stm32f303x8"] }
panic-probe = { version="0.3.0", features = ["print-defmt"] }
crc = "3.0.1"
serde = { version = "1.0.163", default-features = false, features = ["derive"] }
serde_cbor = { version = "0.11.2", default-features = false }
serde-json-core = "0.5.0"

# this lets you use `cargo fix`!
[[bin]]
name = "sun-sensor"
test = false
bench = false

[profile.release]
opt-level = "z"  # Optimize for size.
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
